Enabled auto rotate, fixed z-index dots

--- a/assets/global.css
+++ b/assets/global.css
@@ -318,7 +318,9 @@ html {
 }
 
 /*================ Header ================*/
-
+.section-header.shopify-section-group-header-group {
+  z-index: 4;
+}
 
 .header__icon { color: var(--brand-refresh); }
 
