--- a/assets/k-hero-styles.css
+++ b/assets/k-hero-styles.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   border: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .k-hero .banner__heading {
